--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Lucithon",
+    "name": "picthon",
     "description": " اهلا بكم في تنصيب سورس صيد اليوزرات !",
-    "logo" : "https://telegra.ph/file/cb60fceba65dfa36bd80a.jpg",
+    "logo" : "https://i.postimg.cc/nzY3nwd4/IMG-20230510-025036-841.jpg",
     "stack": "container",
     "repository": "https://github.com/perdark/per-sed",
     "keywords": [
